added companies of user
