# repository/InformerRepository.js
@@ -20,10 +20,5 @@ class InformerRepository {
     return await Informer.find();
   }
 
-  async createTaskByInformer(taskBody) {
-    const task = new Task(taskBody);
-    return await task.save();
-  }
-
 }
 module.exports = InformerRepository;
